--- a/01_introduction_to_unix_command_line/intro_to_unix_command_line.ipynb
+++ b/01_introduction_to_unix_command_line/intro_to_unix_command_line.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<hr>\n",
     "\n",
-    "# <font color='Purple'>GENTEIC ANALYSIS: INTRODUCTION TO THE UNIX COMMAND LINE</font>\n",
+    "# <font color='Purple'>GENTETIC ANALYSIS: INTRODUCTION TO THE UNIX COMMAND LINE</font>\n",
     "\n",
     "<hr>\n",
     "    \n",
@@ -19,7 +19,7 @@
    "id": "6954f6a5",
    "metadata": {},
    "source": [
-    "![terminal](images/terminal.jpg)"
+    "![terminal](images/unix.png)"
    ]
   },
   {
@@ -515,25 +515,11 @@
    "id": "78ab9281",
    "metadata": {},
    "source": [
-    "# <font color='Purple'>4. End of session<font>\n",
-    "    \n",
-    "\n",
-    "**Important: Before you leave this jupyter notebook, use the internet browser menu to `print as PDF`.**  \n",
-    "\n",
-    "Ask a demonstrator if you need help.  \n",
-    "\n",
-    "This can then be kept as a reference for you in the future. Something to look back on.\n",
+    "# <font color='Purple'>End of session<font>\n",
+    "   \n",
     "\n",
     "**You have now learnt sufficient command line skills for the next session:**\n",
     "### <font color='Purple'>ONT sequencing data analysis<font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4eb6c6be",
-   "metadata": {},
-   "source": [
-    "![terminal](images/terminal.jpg)"
    ]
   }
  ],
