--- a/01_introduction_to_unix_command_line/intro_to_unix_command_line.ipynb
+++ b/01_introduction_to_unix_command_line/intro_to_unix_command_line.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<hr>\n",
     "\n",
-    "# <font color='Purple'>GENTETIC ANALYSIS: INTRODUCTION TO THE UNIX COMMAND LINE</font>\n",
+    "# <font color='Purple'>GENETIC ANALYSIS: INTRODUCTION TO THE UNIX COMMAND LINE</font>\n",
     "\n",
     "<hr>\n",
     "    \n",
