--- a/02_ONT_sequencing_data_analysis/ONT_sequencing_data_analysis.ipynb
+++ b/02_ONT_sequencing_data_analysis/ONT_sequencing_data_analysis.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<hr>\n",
     "\n",
-    "# <font color='Purple'>GENTETIC ANALYSIS: ONT SEQUENCING DATA ANALYSIS</font>\n",
+    "# <font color='Purple'>GENETIC ANALYSIS: ONT SEQUENCING DATA ANALYSIS</font>\n",
     "\n",
     "<hr>\n",
     "    \n",
