--- a/02_ONT_sequencing_data_analysis/ONT_sequencing_data_analysis.ipynb
+++ b/02_ONT_sequencing_data_analysis/ONT_sequencing_data_analysis.ipynb
@@ -373,7 +373,7 @@
     "\n",
     "Check with a demonstrator if unsure.\n",
     "\n",
-    "The **results/kraken2/reports** and **results/kraken2/outputs** should now have a file in each.\n",
+    "The **results/kraken2/** directory should now have a files in.\n",
     "\n",
     "**Explore them using you command line skills:**"
    ]
