--- a/03_R_analysis/R_analysis.ipynb
+++ b/03_R_analysis/R_analysis.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43013dfa",
+   "id": "25378272",
    "metadata": {},
    "source": [
     "...now the first row:"
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c897197f",
+   "id": "0569021f",
    "metadata": {},
    "source": [
     "To put this into context: rows are before the comma, columns after.  \n",
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eab4c30",
+   "id": "f0272c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fea3b69",
+   "id": "8433d50e",
    "metadata": {},
    "source": [
     "# <font color='Purple'>4. Formatting the data</font>\n",
@@ -1043,14 +1043,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b8971a",
+   "id": "25ac9a65",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0e26c64b",
+   "id": "1a571787",
    "metadata": {},
    "source": [
     "You will see that the first two characters of each sample name are distinct to each limb. Right?  \n",
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ecbe3f4",
+   "id": "ddadc178",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5a482dd",
+   "id": "1f7fd94b",
    "metadata": {},
    "source": [
     "The output of `grep()` has just shown us the row numbers that have \"LL\" in their name.  \n",
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22fb469b",
+   "id": "a7753e0f",
    "metadata": {},
    "source": [
     "**Explore the list of dataframes.**  \n",
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcfc39d5",
+   "id": "2ab38e6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d22363e3",
+   "id": "0c99abf6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5904e6b",
+   "id": "728b3ca1",
    "metadata": {},
    "source": [
     "The limbs are numbered. This is done because *R* alphabetically orders things and will mess with our order of samples (legs, then arms).  \n",
@@ -1205,7 +1205,7 @@
     "\n",
     "Let's make our first meaningful plot of the analysis...\n",
     "\n",
-    "### <font color='Purple'>OTU richness boxplot:</font>\n",
+    "### <font color='Purple'>OTU richness boxplot</font>\n",
     "Now we will use the following code to make a boxplot of OTU richness per sample per site:"
    ]
   },
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94e72d8",
+   "id": "1d174be0",
    "metadata": {},
    "source": [
     "What does the code in the above cell do? It has been annotated, do ***you*** understand it? Could ***you*** do it by yourself?\n",
@@ -1242,7 +1242,7 @@
     "\n",
     "Once you have thought/Googled about it, discuss with the person next to you or ask a demonstrator.\n",
     "\n",
-    "### <font color='Purple'>Total OTU richness barplot:</font>\n",
+    "### <font color='Purple'>Total OTU richness barplot</font>\n",
     "Now we will use the `body_parts` list object we created earlier. Remember?  \n",
     "\n",
     "For each limb we will now calculate the total OTU richness.  \n",
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c06f3f8b",
+   "id": "97c1a89c",
    "metadata": {},
    "source": [
     "Does the above code make sense? It should at least make some. Ask a demonstrator if unsure.  \n",
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "783ffd6b",
+   "id": "40990934",
    "metadata": {},
    "source": [
     "Now we have another plot. What does it mean?  \n",
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbacbd2d",
+   "id": "b557ab92",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1339,9 +1339,9 @@
    "id": "6ede36f4",
    "metadata": {},
    "source": [
-    "## <font color='Purple'>5.1. OTU accumulation:</font>\n",
+    "### <font color='Purple'>5.2.1. OTU accumulation</font>\n",
     "\n",
-    "We have the `body_parts` list dcreated (from above).  \n",
+    "We have the `body_parts` list created (from above).  \n",
     "\n",
     "recall `body_parts` in the cell below:"
    ]
@@ -1349,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f500bec",
+   "id": "6ed42a12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45aa1d06",
+   "id": "e7528664",
    "metadata": {},
    "source": [
     "\n",
@@ -1372,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb683b4d",
+   "id": "55d0d87f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea2718cf",
+   "id": "673f611d",
    "metadata": {},
    "source": [
     "As you can see \"*looping*\" is logically simple and very useful.  \n",
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b45218c9",
+   "id": "91a63acf",
    "metadata": {},
    "source": [
     "There may have been some warnings there, do not worry. All is OK! We have just generated something!  \n",
@@ -1461,14 +1461,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46a11bc8",
+   "id": "ca573855",
    "metadata": {},
    "source": [
     "We now have accumulation curves for OTUs. Is this meaningful?  \n",
     "Can you determine if the sampling number was sufficient to capture the maxima of OTUs?\n",
     "\n",
     "Discuss the results with the person next to you or ask a demonstrator.\n",
-    "## <font color='Purple'>5.2. NMDS ordination:</font>\n",
+    "### <font color='Purple'>5.2.2. NMDS ordination</font>\n",
     "**Now we get to plot a Non-metric multidimensional scaling (NMDS) ordination!**  \n",
     "\n",
     "As already mentioned Vegan has many purposes. This is the one that will show you the most important results.  \n",
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e13ebfe8",
+   "id": "e7f3e1ed",
    "metadata": {},
    "source": [
     "### <font color='Purple'>5.2.1. Vegan metaMDS</font>\n",
@@ -1514,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e3ff8bd",
+   "id": "f7d4bf9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fadb572",
+   "id": "27ec4425",
    "metadata": {},
    "source": [
     "There is a lot going on here.  \n",
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62d6a891",
+   "id": "fab42324",
    "metadata": {},
    "source": [
     "Can you interpret the plot correctly? Can you understand the code that made it?  \n",
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01caefc0",
+   "id": "2ab03339",
    "metadata": {},
    "source": [
     "# <font color='Purple'>6. Session complete</font>\n",
