--- a/04_R_figures/R_figures.ipynb
+++ b/04_R_figures/R_figures.ipynb
@@ -458,9 +458,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "png('plots/test.png', width = 1080, height = 1080, units = 'px', pointsize = 30)\n",
-    "\n",
-    "\n",
     "# empty plot of ord, no axes:\n",
     "plot(ord,\n",
     "     disp = \"sites\",\n",
@@ -520,14 +517,12 @@
     "# add box around the plot:\n",
     "box('plot',\n",
     "    # width of box line:\n",
-    "    lwd = 2)\n",
-    "\n",
-    "dev.off()"
+    "    lwd = 2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e5a51623",
+   "id": "50cb9225",
    "metadata": {},
    "source": [
     "# <font color='Purple'>6. Session complete</font>\n",
