--- a/04_R_figures/R_figures.ipynb
+++ b/04_R_figures/R_figures.ipynb
@@ -482,7 +482,7 @@
     "# add vertical and horizontal lines to show \"0, 0\":\n",
     "abline(h = 0, v = 0, lwd = 2, col = 'grey')\n",
     "\n",
-    "# add ordination circumference elipses with corerect colours:\n",
+    "# add ordination circumference elipses with correct colours:\n",
     "ordiellipse(ord,\n",
     "            veg_env$side_limb,\n",
     "            kind = \"ehull\",\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50cb9225",
+   "id": "ba6d1ffa",
    "metadata": {},
    "source": [
     "# <font color='Purple'>6. Session complete</font>\n",
